2010-01-17  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        style-queue complains about missing #include of config.h for non-WebCore projects
        https://bugs.webkit.org/show_bug.cgi?id=33170

        WebKitAPITests are consumers of the WebKit API and therefore do not
        need to follow the same include discipline as the rest of WebKit.  This
        patch exempts them from the include checks.

        * Scripts/webkitpy/style/cpp_style.py:
        * Scripts/webkitpy/style/cpp_style_unittest.py:

2010-01-17  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        EWS (Early Warning Systems) should build both debug and release
        https://bugs.webkit.org/show_bug.cgi?id=33681

        Build both debug and release for chromium-ews.

        * Scripts/webkitpy/commands/early_warning_system.py:

2010-01-17  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        style-queue should include instructions for how to file bugs against check-webkit-style
        https://bugs.webkit.org/show_bug.cgi?id=32345

        Added some text to the error message asking folks to file bugs against
        false positives.

        * Scripts/webkitpy/commands/queues.py:

2010-01-17  Chris Jerdonek  <cjerdonek@webkit.org>

        Reviewed by Adam Barth.

        Eliminated the error_count global variable and related
        check-webkit-style refactoring.

        https://bugs.webkit.org/show_bug.cgi?id=33678

        * Scripts/check-webkit-style:
          - Updated to use webkit_argument_defaults().
          - Renamed styleChecker to style_checker.

        * Scripts/webkitpy/style/checker.py:
          - Prefixed the three default arguments with WEBKIT_DEFAULT.
          - Added webkit_argument_defaults().
          - Added default filter_rules parameter to CategoryFilter constructor.
          - Added __ne__() to CategoryFilter class.
          - Added __eq__() and __ne__() to ProcessorOptions class.