@@ -2483,6 +2483,8 @@ def check_identifier_name_in_declaration(filename, line_number, line, error):
             # Various exceptions to the rule: JavaScript op codes functions, const_iterator.
             if (not (filename.find('JavaScriptCore') >= 0 and modified_identifier.find('_op_') >= 0)
                 and not modified_identifier.startswith('tst_')
+                and not modified_identifier.startswith('qt_')
+                and not modified_identifier.find('::qt_') >= 0
                 and not modified_identifier == "const_iterator"):
                 error(filename, line_number, 'readability/naming', 4, identifier + " is incorrectly named. Don't use underscores in your identifier names.")
 
